--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class='container'> 
       <header>
-      <div id='logo'><a href= '#'><img src='SKY.png'></a> </div>
+      <div id='logo'><a href= '#'><img src='SKY.PNG'></a> </div>
         
         <ul class='navu'>
             <li><a href = 'index.html'>Home</a></li>
